@@ -4,6 +4,7 @@ export(OncogenicPathways)
 export(PlotOncogenicPathways)
 export(annovarToMaf)
 export(clinicalEnrichment)
+export(coBarplot)
 export(coOncoplot)
 export(compareSignatures)
 export(drugInteractions)
